--- a/ops/locale/en_US/manager.xml
+++ b/ops/locale/en_US/manager.xml
@@ -113,6 +113,7 @@
 	<message key="manager.plugins.wrongName">The version.xml in the uploaded plugin contains a plugin name that does not fit the name of the upgraded plugin.</message>
 	<message key="manager.plugins.pleaseInstall">Plugin does not exist.  Please Install instead</message>
 	<message key="manager.plugins.pleaseUpgrade">Plugin already exists, but is newer than installed version.  Please upgrade instead</message>
+	<message key="manager.plugins.settings">Settings</message>
 	<message key="manager.plugins.tarCommandNotFound">The tar command is not available. Please correctly configure it in your "config.inc.php".</message>
 	<message key="manager.plugins.upgrade">Upgrade Plugin</message>
 	<message key="manager.plugins.upgradeDescription">This form allows you to upgrade a plugin.  Please ensure the plugin is compressed as a .tar.gz file.</message>
@@ -246,39 +247,6 @@
 	<message key="manager.setup.disciplineExamples">(E.g., History; Education; Sociology; Psychology; Cultural Studies; Law)</message>
 	<message key="manager.setup.disciplineProvideExamples">Provide examples of relevant academic disciplines for this journal</message>
 	<message key="manager.setup.displayCurrentIssue">Add the table of contents for the current issue (if available).</message>
-	<message key="manager.setup.doi">DOI</message>
-	<message key="manager.setup.doiObjects">Assign DOIs to...</message>
-	<message key="manager.setup.enableIssueDoi">Issues</message>
-	<message key="manager.setup.enableArticleDoi">Articles</message>
-	<message key="manager.setup.enableGalleyDoi">Galleys</message>
-	<message key="manager.setup.enableSuppFileDoi">Supplementary Files</message>
-	<message key="manager.setup.explainDois">Please select the publishing objects that will have Digital Object Identifiers (DOI) assigned:</message>
-	<message key="manager.setup.doiPrefix">DOI Prefix</message>
-	<message key="manager.setup.doiPrefixDescription"><![CDATA[The DOI Prefix is assigned by registration agencies (e.g. <a href="http://www.crossref.org" target="_new">CrossRef</a>) and is in the format 10.xxxx (e.g. 10.1234).]]></message>
-	<message key="manager.setup.doiSuffix">DOI Suffix</message>
-	<message key="manager.setup.doiSuffixDefault">Use default patterns.</message>
-	<message key="manager.setup.doiSuffixDefault.description"><![CDATA[%j.v%vi%i for issues<br />%j.v%vi%i.%a for articles<br />%j.v%vi%i.%a.g%g for galleys <br />%j.v%vi%i.%a.s%s for supplementary files.]]></message>
-	<message key="manager.setup.doiSuffixPattern">Use the pattern entered below to generate DOI suffixes. Use %j for journal initials, %v for the volume number, %i for the issue number, %Y for the year, %a for the OJS article ID, %g for the OJS galley ID, %s for the OJS supplementary file ID and %p for the page number.</message>
-	<message key="manager.setup.doiSuffixPattern.issues">for issues</message>
-	<message key="manager.setup.doiSuffixPattern.articles">for articles</message>
-	<message key="manager.setup.doiSuffixPattern.galleys">for galleys</message>
-	<message key="manager.setup.doiSuffixPattern.suppFiles">for supplementary files.</message>
-	<message key="manager.setup.form.doiIssueSuffixPatternRequired">Please enter the DOI suffix pattern for issues.</message>
-	<message key="manager.setup.form.doiArticleSuffixPatternRequired">Please enter the DOI suffix pattern for articles.</message>
-	<message key="manager.setup.form.doiGalleySuffixPatternRequired">Please enter the DOI suffix pattern for galleys.</message>
-	<message key="manager.setup.form.doiSuppFileSuffixPatternRequired">Please enter the DOI suffix pattern for supplementary files.</message>
-	<message key="manager.setup.doiSuffixPattern.example">For example, vol%viss%ipp%p could create a DOI such as 10.1234/vol3iss2pp230</message>
-	<message key="manager.setup.doiSuffixDescription">A DOI suffix can take any form, but must be unique among all publishing objects with the same DOI prefix assigned.</message>
-	<message key="manager.setup.doiSuffixPublisherId">Use the "Custom Identifier" for published items as the DOI suffix (must be enabled in Step 4). This is the same identifier that will be used for public URLs.</message>
-	<message key="manager.setup.doiSuffixCustomIdentifier">Enter an individual DOI suffix for each published item independent and different from the "Custom Identifier" mentioned in the previous option. You'll find an additional DOI input field on each item's meta-data page.</message>
-	<message key="manager.setup.doiSuffixCustomIdentifierNotUnique">The given DOI suffix is already in use for another published item. Please enter a unique DOI suffix for each item.</message>
-	<message key="manager.setup.doiReassign">Reassign DOIs</message>
-	<message key="manager.setup.doiReassign.description">If you change your DOI configuration, DOIs that have already been assigned will not be affected. Once the DOI configuration is saved, use this button to clear all existing DOIs so that the new settings will take effect with existing articles.</message>
-	<message key="manager.setup.doiNotYetGenerated">A DOI has not yet been generated. Publishing the issue and viewing the public {$objectType} page will automatically generate a unique DOI for this {$objectType}.</message>
-	<message key="manager.setup.doiObjectTypeIssue">issue</message>
-	<message key="manager.setup.doiObjectTypeArticle">article</message>
-	<message key="manager.setup.doiObjectTypeGalley">galley</message>
-	<message key="manager.setup.doiObjectTypeSuppFile">supplementary file</message>
 	<message key="manager.setup.editorDecision">Editor Decision</message>
 	<message key="manager.setup.editorialMembers">Go to Board Members and add Editorial Board and/or Review Board members. This can be done at any point in operating the journal.</message>
 	<message key="manager.setup.editorialProcess1">One or more editors handle the basic steps without designated roles.</message>
@@ -316,7 +284,6 @@
 	<message key="manager.setup.form.journalInitialsRequired">The journal initials are required.</message>
 	<message key="manager.setup.form.journalTitleRequired">The journal title is required.</message>
 	<message key="manager.setup.form.numReviewersPerSubmission">The number of reviewers per submission is required.</message>
-	<message key="manager.setup.form.doiPrefixPattern">The DOI pattern must be in the form 10.xxxx.</message>
 	<message key="manager.setup.form.supportEmailRequired">The support email is required.</message>
 	<message key="manager.setup.form.supportNameRequired">The support name is required.</message>
 	<message key="manager.setup.frequencyOfPublication">Starting Point and Frequency</message>
