--- a/ops/plugins/importexport/crossref/locale/en_US/locale.xml
+++ b/ops/plugins/importexport/crossref/locale/en_US/locale.xml
@@ -31,5 +31,5 @@
 	<message key="plugins.importexport.crossref.export.error.issueNotFound">No issue matched the specified issue ID "{$issueId}".</message>
 	<message key="plugins.importexport.crossref.export.error.articleNotFound">No article matched the specified article ID "{$articleId}".</message>
 
-	<message key="plugins.importexport.crossref.errors.noDOIprefix">A valid DOI prefix must be specified in the Journal Setup in order to use this plugin.</message>
+	<message key="plugins.importexport.crossref.errors.noDOIprefix">In order to use this plug-in please go to the "Public Identifier" plug-in category, enable and configure the DOI plug-in and specify a valid DOI prefix there.</message>
 </locale>
