--- a/ojs/locale/de_DE/editor.xml
+++ b/ojs/locale/de_DE/editor.xml
@@ -144,7 +144,7 @@
 	<message key="editor.article.decision">Entscheidung</message>
 	<message key="editor.article.noEditorSelected">Kein/e Redakteur/in ausgewählt.</message>
 	<message key="editor.article.recordDecision">Entscheidung protokollieren</message>
-	<message key="editor.article.cannotRecord">Bisher wurde kein/e Rubrikredakteur/in festgelegt. </message>
+	<message key="editor.article.cannotRecord">Bisher kein/e Rubrikredakteur/in festgelegt, oder es ist keine Begutachtungsfassung vorhanden. </message>
 	<message key="editor.article.reviewersSeeAuthorsVersion">Gutachter/innen, denen die Autor/innenversion zugeht</message>
 	<message key="editor.article.designateDueDate">Abgabetermin festlegen</message>
 	<message key="editor.article.designateDueDateDescription">Geben Sie ein Datum oder eine Anzahl von Wochen für den neuen Abgabetermin ein.</message>
