*7476* Created locale key for settings wizard

--- a/pkp-lib/locale/en_US/grid.xml
+++ b/pkp-lib/locale/en_US/grid.xml
@@ -32,6 +32,7 @@
 	<message key="grid.action.cancelOrdering">Cancel ordering</message>
 	<message key="grid.action.extendAll">Extend all</message>
 	<message key="grid.action.collapseAll">Collapse all</message>
+	<message key="grid.action.wizard">Settings wizard</message>
 
 	<!-- Common Grid Column Titles -->
 	<message key="grid.columns.actions">Actions</message>
