*7478* Inserted locale key for language grid column

--- a/pkp-lib/locale/en_US/grid.xml
+++ b/pkp-lib/locale/en_US/grid.xml
@@ -41,6 +41,7 @@
 	<message key="grid.columns.institution">Institution</message>
 	<message key="grid.columns.url">URL</message>
 	<message key="grid.columns.auditor">Auditor</message>
+	<message key="grid.columns.locale">Locale</message>
 
 	<!-- Sponsors Grid -->
 	<message key="grid.sponsor.title">Sponsors</message>
