--- a/pkp-lib/locale/es_AR/submission.xml
+++ b/pkp-lib/locale/es_AR/submission.xml
@@ -164,7 +164,7 @@
 	<message key="submission.layout.galleyLanguageRequired">Un lenguaje de galera es requerido.</message>
 	<message key="submission.layout.galleyLocaleRequired">Una configuración regional para la galerada es requerida</message>
 	<message key="submission.citations">Referencias</message>
-	<message key="submission.citations.jQueryRequired"><![CDATA[La edicion de citas requiere que jQuery esté habilitado. Por favor diríjase a la <a target="_new" href="{$genericPluginsUrl}"> página de plugins genéricos </a> y habilite el plugin de jQuery allí]]></message>
+	<message key="submission.citations.jQueryRequired"><![CDATA[La edicion de citas requiere que jQuery esté habilitado. Por favor diríjase a la <a target="_blank" href="{$genericPluginsUrl}"> página de plugins genéricos </a> y habilite el plugin de jQuery allí]]></message>
 	<message key="submission.citations.editor.citationlist.title">Editar Citaciones</message>
 	<message key="submission.citations.grid.importCitations">Importar Citaciones</message>
 	<message key="submission.citations.grid.parseCitation">Parsear</message>
