--- a/pkp-lib/locale/fa_IR/common.xml
+++ b/pkp-lib/locale/fa_IR/common.xml
@@ -268,21 +268,21 @@
 	<message key="search.title">عنوان</message>
 	<message key="search.typeMethodApproach">نوع ، روش یا راهکار</message>
 	<message key="common.ccLicense"><![CDATA[<br /><br />
-		<a target="_new" rel="license" href="http://creativecommons.org/licenses/by/3.0/">
+		<a target="_blank" rel="license" href="http://creativecommons.org/licenses/by/3.0/">
 			<img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png"/>
 		</a>
 		<br/>
 کار حاضر تحت لیسانس
-		<a rel="license" target="_new" href="http://creativecommons.org/licenses/by/3.0/">
+		<a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/3.0/">
 		Creative Commons Attribution 3.0
 		</a>
 		میباشد.]]></message>
 	<message key="common.ccLicense.rt"><![CDATA[<div class="rtBlock">
 		<br />
-		<a rel="license" href="http://creativecommons.org/licenses/by/3.0/" target="_new"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a>
+		<a rel="license" href="http://creativecommons.org/licenses/by/3.0/" target="_blank"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a>
 		<br />
 کار حاضر تحت لیسانس
-		<a rel="license" target="_new" href="http://creativecommons.org/licenses/by/3.0/">
+		<a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/3.0/">
 		Creative Commons Attribution 3.0
 		</a>
 		میباشد.]]></message>
