*7471* add locale key for reading signoffs

--- a/pkp-lib/locale/en_US/grid.xml
+++ b/pkp-lib/locale/en_US/grid.xml
@@ -64,6 +64,7 @@
 	<message key="grid.action.addSignoff">Add an audit response for this file</message>
 	<message key="grid.action.deleteSignoff">Delete this signoff</message>
 	<message key="grid.action.fileSignoff">Signoff on this file</message>
+	<message key="grid.action.readSignoff">Read this signoff</message>
 	<message key="grid.action.expandAll">Expand All</message>
 	<message key="grid.action.requestAccount">Add a participant</message>
 	<message key="grid.action.expand">Expand</message>
